bluec-tests/tests/invalid/types_bool/invalid_type_specifier3.c
int main(void) {
    _Bool static long x = 0;
    return 0;
}